--- a/samromur_milljon_dataset_inspection/samromur_milljon_data_analysis_over_18.ipynb
+++ b/samromur_milljon_dataset_inspection/samromur_milljon_data_analysis_over_18.ipynb
@@ -123,10 +123,10 @@
     "columns = [0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
     "\n",
     "# Group the columns together by duration, for example one is 0-1 seconds, another is 1-2 seconds up to 8 seconds. All recordings over 8 seconds are grouped together ##\n",
-    "df['duration_bin'] = pd.cut(df['duration'], columns + [float('inf')], right=False, labels=[\"0-1\", \"1-2\", \"2-3\", \"3-4\", \"4-5\", \"5-6\", \"6-7\", \"7-8\", \"8+\"])\n",
+    "df['duration_columns'] = pd.cut(df['duration'], columns + [float('inf')], right=False, labels=[\"0-1\", \"1-2\", \"2-3\", \"3-4\", \"4-5\", \"5-6\", \"6-7\", \"7-8\", \"8+\"])\n",
     "\n",
     "## Count the number of recordings for each duration column ##\n",
-    "duration_counts = df['duration_bin'].value_counts(sort=False)\n",
+    "duration_counts = df['duration_columns'].value_counts(sort=False)\n",
     "\n",
     "## Calculate the percentage of recordings for each duration column ##\n",
     "total_recordings = duration_counts.sum()\n",
